--- a/login.html
+++ b/login.html
@@ -2,10 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>My Project</title>
+    <title></title>
   </head>
   <body>
-    <h1>This is my App</h1>
-    <h2>Login Form</h2>
+    <h1>Login</h1>
   </body>
 </html>
